test/fails/bad_types/mat.lgl
mat3x3 e = [2.3, 2.1];
print e;